deploy/aks/k8s/client/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: customer-insights
  labels:
    app: client
spec:
  type: ClusterIP
  selector:
    app: client
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
